@@ -88,7 +88,9 @@
     <!-- Dependencies -->
     <commons-logging.version>1.1.1</commons-logging.version>
     <commons-cli.version>1.2</commons-cli.version>
-    <hadoop.version>0.20.2</hadoop.version>
+    <commons-configuration>1.6</commons-configuration>
+    <commons-lang>2.6</commons-lang>
+    <hadoop.version>1.0.0</hadoop.version>
     <jetty.version>6.1.14</jetty.version>
     <junit.version>4.8.1</junit.version>
     <slf4j.version>1.5.8</slf4j.version>
@@ -119,6 +121,16 @@
         <groupId>commons-cli</groupId>
         <artifactId>commons-cli</artifactId>
         <version>${commons-cli.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-configuration</groupId>
+        <artifactId>commons-configuration</artifactId>
+        <version>${commons-configuration}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>${commons-lang}</version>
       </dependency>
       <dependency>
         <groupId>org.mortbay.jetty</groupId>
