@@ -12,6 +12,7 @@ Release 0.5 - Unreleased
 
   IMPROVEMENTS
 
+    HAMA-497: Switch the trunk to Hadoop 1.0 based (edwardyoon) 
     HAMA-445: Make configurable checkpointing (Suraj Menon via edwardyoon)
     HAMA-498: BSPTask should periodically ping its parent (Suraj Menon via edwardyoon)
     HAMA-513: Move message classes to somewhere from bsp package. (tjungblut)
